--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/resumen.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/resumen.tex
@@ -19,7 +19,7 @@ A lo largo de los años se han utilizado las encuestas como método de recopilació
 Específicamente en el ámbito de la salud, la recolección de datos en gran escala llega a tener un impacto masivo, ya que con ellos se puede llevar a cabo un seguimiento de la información y ayudar a tomar medidas inmediatas, tanto preventivas como informativas, sobre verdaderas prioridades, obteniendo como resultado la reducción de enfermedades, mejoras en la calidad de vida, etc.
 \\
 
-Actualmente, la Facultad de Ciencias Médicas de la Universidad Nacional del Litoral se encarga de realizar encuestas sobre salud de la manera tradicional, es decir con "lápiz y papel". Ésta metodología no solamente hace que el proceso esté propenso a errores, sino que también aumenta la dificultad de realización en forma masiva. Lo cual genera un aumento en los costos de transacción y demora en el procesamiento de los datos, imposibilitando de ésta forma tomar medidas urgentes.
+Actualmente, la Facultad de Ciencias Médicas de la Universidad Nacional del Litoral se encarga de realizar encuestas sobre salud de la manera tradicional, es decir con ``lápiz y papel''. Ésta metodología no solamente hace que el proceso esté propenso a errores, sino que también aumenta la dificultad de realización en forma masiva. Lo cual genera un aumento en los costos de transacción y demora en el procesamiento de los datos, imposibilitando de ésta forma tomar medidas urgentes.
 \\
 
 Aprovechando los distintos beneficios que proporcionan las tecnologías hoy en día, la finalidad del presente proyecto es llevar a cabo el desarrollo de una aplicación móvil que digitalice las encuestas, llevando a una reducción de las labores mencionadas, con un procesamiento de datos y obtención de resultados en cuestión de segundos. A su vez se brindará la posibilidad de obtener los datos de forma geo-referenciada y exportarlos en formato Excel, para que distintas ramas de la medicina trabajen con ellos, así como también los bio-estadísticos que vuelcan dichos datos en distintos softwares de estadística.
