--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
@@ -38,6 +38,11 @@
 	note = {Accedido: 13/12/2018}
 }
 
-
+@book{itemsImportancia,
+	title={Evaluar para seguir adelante: Resultados del Programa Redes},
+	author={C. Cejas, M. Pen{\'e}, A. Macchia and D. Ferrante},
+	year={2016},
+	publisher={Cobertura Universal de Salud}
+}
 
 
