--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/resumen.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/resumen.tex
@@ -22,14 +22,14 @@ Específicamente en el ámbito de la salud, la recolección de datos en gran escala
 Actualmente, la Facultad de Ciencias Médicas de la Universidad Nacional del Litoral se encarga de realizar encuestas sobre salud de la manera tradicional, es decir con ``lápiz y papel''. Ésta metodología no solamente hace que el proceso esté propenso a errores, sino que también aumenta la dificultad de realización en forma masiva. Lo cual genera un aumento en los costos de transacción y demora en el procesamiento de los datos, imposibilitando de ésta forma tomar medidas urgentes.
 \\
 
-Aprovechando los distintos beneficios que proporcionan las tecnologías hoy en día, la finalidad del presente proyecto es llevar a cabo el desarrollo de una aplicación móvil que digitalice las encuestas, llevando a una reducción de las labores mencionadas, con un procesamiento de datos y obtención de resultados en cuestión de segundos. A su vez se brindará la posibilidad de obtener los datos de forma geo-referenciada y exportarlos en formato Excel, para que distintas ramas de la medicina trabajen con ellos, así como también los bio-estadísticos que vuelcan dichos datos en distintos softwares de estadística.
+Aprovechando los distintos beneficios que proporcionan las tecnologías hoy en día, la finalidad del presente proyecto es llevar a cabo el desarrollo de una aplicación móvil que digitalice las encuestas, llevando a una reducción de las labores mencionadas, con un procesamiento de datos y obtención de resultados en cuestión de segundos. A su vez se brindará la posibilidad de obtener los datos de forma georeferenciada y exportarlos en formato Excel, para que distintas ramas de la medicina trabajen con ellos, así como también los bio-estadísticos que vuelcan dichos datos en distintos softwares de estadística.
 \\
 
 Con la finalidad de independizar los datos que representan el núcleo del proyecto de la aplicación, se llevará a cabo el desarrollo de un Web Service el cual será consumido a la hora de cargar información y realizar los ABMs correspondientes.
 \\
 
 \smallskip
-\noindent \textbf{Palabras claves:} Encuestas, Dispositivo Móvil, Aplicación Móvil, Web Service, Geo-Referencias, Epidemiología, GPS, Endpoint.
+\noindent \textbf{Palabras claves:} Encuestas, Dispositivo Móvil, Aplicación Móvil, Web Service, Georeferencias, Epidemiología, GPS, Endpoint.
 
 \newpage
 \thispagestyle{empty}
