--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/01Capitulo1.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/01Capitulo1.tex
@@ -148,6 +148,10 @@ En la presente sección se describen todas las tecnologías y recursos utilizados 
 	\item \textbf{Controlador de Versiones}: Git v2.7.4	
 \end{itemize}
 
+\newpage
+\thispagestyle{empty}
+\mbox{ }
+
 % TODO!!! Anexar el anteproyecto entregado.
 % Usar el export en PDF de read the docs para adjuntar la documentación
 
