--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Tesis.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Tesis.tex
@@ -136,7 +136,7 @@ constantes,guionado,Cascaras/bibliografia,config%
 
 %\include{Capitulos/Parte1}
 \include{Capitulos/01Capitulo1}
-%\include{Capitulos/01Capitulo2}
+\include{Capitulos/01Capitulo2}
 %\include{Capitulos/01Capitulo3}
 %\include{Capitulos/Parte2}
 %\include{Capitulos/02Capitulo1}
